@@ -86,6 +86,9 @@ h3 {
 	margin-top: 12px;
 }
 
+li {
+	margin-bottom: 15px;
+}
 h4 {
 	font-size: 105%;
 	margin-bottom: 3px;
