@@ -1,3 +1,13 @@
+2006-02-09  Joost de Valk  <jdevalk@opendarwin.org>
+
+        Reviewed by Darin. Landed by ap.
+        
+        - fixes from http://bugzilla.opendarwin.org/show_bug.cgi?id=4871
+        "Reporting Bugs" Page Should Prompt User To Test In Newest Version of WebKit
+        
+        * quality/reporting.html:
+        * webkitdev.css: Added margin-bottom for li.
+
 2006-02-07  Joost de Valk  <jdevalk@opendarwin.org>
 
         Reviewed by Darin. Landed by Maciej.
